--- a/小作文2/index.html
+++ b/小作文2/index.html
@@ -34,10 +34,10 @@
         <nav role="navigation" aria-label="Primary Navigation">
 
             <ul class="menu">
-                <li class="menu-item "><a class="menu__link" href="https://onlythepiano.github.io/">KEEPING</a></li>
+                <li class="menu-item "><a class="menu__link" href="https://onlythepiano.github.io/keeping/">KEEPING</a></li>
             </ul>
             <select onChange="location.href=value;">
-                <option value="https://onlythepiano.github.io/" class="menu-item menu-item-type-custom menu-item-object-custom" >KEEPING</option>
+                <option value="https://onlythepiano.github.io/keeping/" class="menu-item menu-item-type-custom menu-item-object-custom" >KEEPING</option>
             </select>
         </nav>
     </header>
@@ -266,7 +266,7 @@
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/uml/">UML (1)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/%E5%B0%8F%E4%BD%9C%E6%96%87/">小作文 (3)</a>
+                <a href="https://onlythepiano.github.io/categories/%E5%B0%8F%E4%BD%9C%E6%96%87/">小作文 (4)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/%E8%BD%AF%E4%BB%B6%E5%B7%A5%E7%A8%8B/">软件工程 (2)</a>
             </li>
@@ -275,13 +275,16 @@
 
     <aside class="widget widget_tag_cloud">
         <h2>Tags</h2>
-        <div class="tagcloud">
+        <div class="tagcloud"><a class="tag-cloud-link" href="https://onlythepiano.github.io/tags/out-of-mess/" title="out-of-mess" style="font-size: 12pt;">out of mess</a>&emsp;
         </div>
     </aside>
 
     <aside class="widget widget_recent_entries">
         <h2>Recent Posts</h2>
         <ul>
+            <li>
+                <a href="/keeping/">Keeping</a>
+            </li>
             <li>
                 <a href="/hosts/">Hosts</a>
             </li>
@@ -308,9 +311,6 @@
             </li>
             <li>
                 <a href="/%E5%86%B2%E7%AA%81-%E8%BF%9C%E7%AB%AF%E9%83%A8%E7%BD%B2/">冲突-远端部署</a>
-            </li>
-            <li>
-                <a href="/hugo-post%E6%96%87%E4%BB%B6%E5%A4%B9/">Hugo post文件夹</a>
             </li>
         </ul>
     </aside>
