--- a/e-r图/index.html
+++ b/e-r图/index.html
@@ -201,11 +201,11 @@
     <aside class="widget widget_categories">
         <h2>Categories</h2>
         <ul class="widget__list"><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/git/">Git (8)</a>
+                <a href="https://onlythepiano.github.io/categories/git/">Git (9)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/hugo/">Hugo (2)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/java/">Java (1)</a>
+                <a href="https://onlythepiano.github.io/categories/java/">Java (2)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/uml/">UML (1)</a>
             </li><li class="cat-item cat-item-2">
@@ -225,6 +225,12 @@
     <aside class="widget widget_recent_entries">
         <h2>Recent Posts</h2>
         <ul>
+            <li>
+                <a href="/%E7%89%88%E6%9C%AC%E6%8E%A7%E5%88%B6%E4%BB%8B%E7%BB%8D/">版本控制介绍</a>
+            </li>
+            <li>
+                <a href="/mavan%E6%9E%84%E5%BB%BA%E5%B7%A5%E5%85%B7/">Mavan构建工具</a>
+            </li>
             <li>
                 <a href="/keeping/">Keeping</a>
             </li>
@@ -248,12 +254,6 @@
             </li>
             <li>
                 <a href="/%E6%95%B0%E6%8D%AE%E6%B5%81%E5%9B%BE%E7%94%BB%E6%B3%95/">数据流图画法</a>
-            </li>
-            <li>
-                <a href="/%E8%A7%A3%E5%86%B3%E5%86%B2%E7%AA%81-%E8%BF%9C%E7%AB%AF%E9%83%A8%E7%BD%B2/">解决冲突 远端部署</a>
-            </li>
-            <li>
-                <a href="/%E5%86%B2%E7%AA%81-%E8%BF%9C%E7%AB%AF%E9%83%A8%E7%BD%B2/">冲突-远端部署</a>
             </li>
         </ul>
     </aside>
