--- a/hosts/index.html
+++ b/hosts/index.html
@@ -209,9 +209,9 @@ Receiving objects:  49% (370/751), 7.44 MiB | 1.13 MiB/s
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/java/">Java (2)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/uml/">UML (1)</a>
+                <a href="https://onlythepiano.github.io/categories/uml/">UML (2)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/%E5%B0%8F%E4%BD%9C%E6%96%87/">小作文 (4)</a>
+                <a href="https://onlythepiano.github.io/categories/%E5%B0%8F%E4%BD%9C%E6%96%87/">小作文 (5)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/%E8%BD%AF%E4%BB%B6%E5%B7%A5%E7%A8%8B/">软件工程 (2)</a>
             </li>
@@ -227,6 +227,9 @@ Receiving objects:  49% (370/751), 7.44 MiB | 1.13 MiB/s
     <aside class="widget widget_recent_entries">
         <h2>Recent Posts</h2>
         <ul>
+            <li>
+                <a href="/%E5%B0%8F%E4%BD%9C%E6%96%874/">小作文4</a>
+            </li>
             <li>
                 <a href="/%E7%89%88%E6%9C%AC%E6%8E%A7%E5%88%B6%E4%BB%8B%E7%BB%8D/">版本控制介绍</a>
             </li>
@@ -253,9 +256,6 @@ Receiving objects:  49% (370/751), 7.44 MiB | 1.13 MiB/s
             </li>
             <li>
                 <a href="/%E5%B0%8F%E4%BD%9C%E6%96%87/">小作文</a>
-            </li>
-            <li>
-                <a href="/%E6%95%B0%E6%8D%AE%E6%B5%81%E5%9B%BE%E7%94%BB%E6%B3%95/">数据流图画法</a>
             </li>
         </ul>
     </aside>
