--- a/简单工厂模式/index.html
+++ b/简单工厂模式/index.html
@@ -198,7 +198,7 @@ oper<span style="color:#f92672">.</span><span style="color:#a6e22e">Number</span
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/%E5%B0%8F%E4%BD%9C%E6%96%87/">小作文 (5)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/">设计模式 (4)</a>
+                <a href="https://onlythepiano.github.io/categories/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/">设计模式 (5)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/%E8%BD%AF%E4%BB%B6%E5%B7%A5%E7%A8%8B/">软件工程 (2)</a>
             </li>
@@ -214,6 +214,9 @@ oper<span style="color:#f92672">.</span><span style="color:#a6e22e">Number</span
     <aside class="widget widget_recent_entries">
         <h2>Recent Posts</h2>
         <ul>
+            <li>
+                <a href="/%E8%A7%82%E5%AF%9F%E8%80%85%E6%A8%A1%E5%BC%8F/">观察者模式</a>
+            </li>
             <li>
                 <a href="/%E5%B7%A5%E5%8E%82%E6%96%B9%E6%B3%95%E6%A8%A1%E5%BC%8F/">工厂方法模式</a>
             </li>
@@ -240,9 +243,6 @@ oper<span style="color:#f92672">.</span><span style="color:#a6e22e">Number</span
             </li>
             <li>
                 <a href="/hosts/">Hosts</a>
-            </li>
-            <li>
-                <a href="/gitclone%E5%8A%A0%E9%80%9F/">Gitclone加速</a>
             </li>
         </ul>
     </aside>
