update blog: 可乐

--- a/git命令远端/index.html
+++ b/git命令远端/index.html
@@ -275,7 +275,7 @@ git pull --rebase origin master
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/uml/">UML (2)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/%E5%B0%8F%E4%BD%9C%E6%96%87/">小作文 (5)</a>
+                <a href="https://onlythepiano.github.io/categories/%E5%8F%AF%E4%B9%90/">可乐 (5)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/">设计模式 (5)</a>
             </li><li class="cat-item cat-item-2">
@@ -309,7 +309,7 @@ git pull --rebase origin master
                 <a href="/%E7%AE%80%E5%8D%95%E5%B7%A5%E5%8E%82%E6%A8%A1%E5%BC%8F/">简单工厂模式</a>
             </li>
             <li>
-                <a href="/%E5%B0%8F%E4%BD%9C%E6%96%874/">小作文4</a>
+                <a href="/4%E5%8F%B7%E6%9D%AF/">4号杯</a>
             </li>
             <li>
                 <a href="/%E7%89%88%E6%9C%AC%E6%8E%A7%E5%88%B6%E4%BB%8B%E7%BB%8D/">版本控制介绍</a>
