--- a/简单工厂模式/index.html
+++ b/简单工厂模式/index.html
@@ -198,7 +198,7 @@ oper<span style="color:#f92672">.</span><span style="color:#a6e22e">Number</span
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/%E5%8F%AF%E4%B9%90/">可乐 (5)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/">设计模式 (5)</a>
+                <a href="https://onlythepiano.github.io/categories/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/">设计模式 (7)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/%E8%BD%AF%E4%BB%B6%E5%B7%A5%E7%A8%8B/">软件工程 (2)</a>
             </li>
@@ -214,6 +214,12 @@ oper<span style="color:#f92672">.</span><span style="color:#a6e22e">Number</span
     <aside class="widget widget_recent_entries">
         <h2>Recent Posts</h2>
         <ul>
+            <li>
+                <a href="/%E5%8D%95%E4%BE%8B%E6%A8%A1%E5%BC%8F2/">单例模式2</a>
+            </li>
+            <li>
+                <a href="/%E5%8D%95%E4%BE%8B%E6%A8%A1%E5%BC%8F/">单例模式</a>
+            </li>
             <li>
                 <a href="/%E8%A7%82%E5%AF%9F%E8%80%85%E6%A8%A1%E5%BC%8F/">观察者模式</a>
             </li>
@@ -237,12 +243,6 @@ oper<span style="color:#f92672">.</span><span style="color:#a6e22e">Number</span
             </li>
             <li>
                 <a href="/mavan%E6%9E%84%E5%BB%BA%E5%B7%A5%E5%85%B7/">Mavan构建工具</a>
-            </li>
-            <li>
-                <a href="/keeping/">Keeping</a>
-            </li>
-            <li>
-                <a href="/hosts/">Hosts</a>
             </li>
         </ul>
     </aside>
