--- a/外观模式/index.html
+++ b/外观模式/index.html
@@ -172,6 +172,8 @@ jijin<span style="color:#f92672">.</span><span style="color:#a6e22e">SellFund</s
             </div>
             <div class="nav-next">
                 
+                <a class="next" href="https://onlythepiano.github.io/5%E5%8F%B7%E6%9D%AF/"> 5号杯</a>
+                
             </div>
         </div>
     </nav>
@@ -195,11 +197,11 @@ jijin<span style="color:#f92672">.</span><span style="color:#a6e22e">SellFund</s
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/hugo/">Hugo (2)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/java/">Java (2)</a>
+                <a href="https://onlythepiano.github.io/categories/java/">Java (3)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/uml/">UML (2)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/%E5%8F%AF%E4%B9%90/">可乐 (5)</a>
+                <a href="https://onlythepiano.github.io/categories/%E5%8F%AF%E4%B9%90/">可乐 (6)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/">设计模式 (8)</a>
             </li><li class="cat-item cat-item-2">
@@ -217,6 +219,9 @@ jijin<span style="color:#f92672">.</span><span style="color:#a6e22e">SellFund</s
     <aside class="widget widget_recent_entries">
         <h2>Recent Posts</h2>
         <ul>
+            <li>
+                <a href="/5%E5%8F%B7%E6%9D%AF/">5号杯</a>
+            </li>
             <li>
                 <a href="/%E5%A4%96%E8%A7%82%E6%A8%A1%E5%BC%8F/">外观模式</a>
             </li>
@@ -243,9 +248,6 @@ jijin<span style="color:#f92672">.</span><span style="color:#a6e22e">SellFund</s
             </li>
             <li>
                 <a href="/4%E5%8F%B7%E6%9D%AF/">4号杯</a>
-            </li>
-            <li>
-                <a href="/%E7%89%88%E6%9C%AC%E6%8E%A7%E5%88%B6%E4%BB%8B%E7%BB%8D/">版本控制介绍</a>
             </li>
         </ul>
     </aside>
