--- a/hosts/index.html
+++ b/hosts/index.html
@@ -213,7 +213,7 @@ Receiving objects:  49% (370/751), 7.44 MiB | 1.13 MiB/s
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/%E5%8F%AF%E4%B9%90/">可乐 (6)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/">设计模式 (8)</a>
+                <a href="https://onlythepiano.github.io/categories/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/">设计模式 (9)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/%E8%BD%AF%E4%BB%B6%E5%B7%A5%E7%A8%8B/">软件工程 (2)</a>
             </li>
@@ -229,6 +229,9 @@ Receiving objects:  49% (370/751), 7.44 MiB | 1.13 MiB/s
     <aside class="widget widget_recent_entries">
         <h2>Recent Posts</h2>
         <ul>
+            <li>
+                <a href="/%E5%BB%BA%E7%AD%91%E8%80%85%E6%A8%A1%E5%BC%8F/">建筑者模式</a>
+            </li>
             <li>
                 <a href="/5%E5%8F%B7%E6%9D%AF/">5号杯</a>
             </li>
@@ -255,9 +258,6 @@ Receiving objects:  49% (370/751), 7.44 MiB | 1.13 MiB/s
             </li>
             <li>
                 <a href="/%E7%AE%80%E5%8D%95%E5%B7%A5%E5%8E%82%E6%A8%A1%E5%BC%8F/">简单工厂模式</a>
-            </li>
-            <li>
-                <a href="/4%E5%8F%B7%E6%9D%AF/">4号杯</a>
             </li>
         </ul>
     </aside>
