--- a/建筑者模式/index.html
+++ b/建筑者模式/index.html
@@ -204,6 +204,8 @@ pdFat<span style="color:#f92672">.</span><span style="color:#a6e22e">CreatePerso
             </div>
             <div class="nav-next">
                 
+                <a class="next" href="https://onlythepiano.github.io/b%E6%A0%91/"> B树</a>
+                
             </div>
         </div>
     </nav>
@@ -229,9 +231,13 @@ pdFat<span style="color:#f92672">.</span><span style="color:#a6e22e">CreatePerso
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/java/">Java (3)</a>
             </li><li class="cat-item cat-item-2">
+                <a href="https://onlythepiano.github.io/categories/mysql/">MySQL (2)</a>
+            </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/uml/">UML (2)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/%E5%8F%AF%E4%B9%90/">可乐 (6)</a>
+            </li><li class="cat-item cat-item-2">
+                <a href="https://onlythepiano.github.io/categories/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/">数据结构 (1)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/">设计模式 (9)</a>
             </li><li class="cat-item cat-item-2">
@@ -249,6 +255,15 @@ pdFat<span style="color:#f92672">.</span><span style="color:#a6e22e">CreatePerso
     <aside class="widget widget_recent_entries">
         <h2>Recent Posts</h2>
         <ul>
+            <li>
+                <a href="/%E6%95%B0%E6%8D%AE%E6%9F%A5%E8%AF%A2/">数据查询</a>
+            </li>
+            <li>
+                <a href="/mysql/">MySQL</a>
+            </li>
+            <li>
+                <a href="/b%E6%A0%91/">B树</a>
+            </li>
             <li>
                 <a href="/%E5%BB%BA%E7%AD%91%E8%80%85%E6%A8%A1%E5%BC%8F/">建筑者模式</a>
             </li>
@@ -269,15 +284,6 @@ pdFat<span style="color:#f92672">.</span><span style="color:#a6e22e">CreatePerso
             </li>
             <li>
                 <a href="/%E5%B7%A5%E5%8E%82%E6%96%B9%E6%B3%95%E6%A8%A1%E5%BC%8F/">工厂方法模式</a>
-            </li>
-            <li>
-                <a href="/%E7%AD%96%E7%95%A5%E6%A8%A1%E5%BC%8F%E7%BB%93%E5%90%88%E7%AE%80%E5%8D%95%E5%B7%A5%E5%8E%82%E6%A8%A1%E5%BC%8F/">策略模式结合简单工厂模式</a>
-            </li>
-            <li>
-                <a href="/%E7%AD%96%E7%95%A5%E6%A8%A1%E5%BC%8F/">策略模式</a>
-            </li>
-            <li>
-                <a href="/%E7%AE%80%E5%8D%95%E5%B7%A5%E5%8E%82%E6%A8%A1%E5%BC%8F/">简单工厂模式</a>
             </li>
         </ul>
     </aside>
