--- a/数据查询/index.html
+++ b/数据查询/index.html
@@ -142,7 +142,15 @@
 <h3 id="21">2.自身连接</h3>
 <p>连接操作也可以和自己连接，需要为自身表取两个别名。</p>
 <h3 id="3">3.外连接</h3>
-<p>额，略</p>
+<p>外连接：把舍弃的悬浮元组也保留到结果关系中。</p>
+<p>左连接：保留左边关系中的悬浮元组。</p>
+<ul>
+<li>&lt;左表&gt; LEFT OUTER JOIN &lt;右表&gt; ON &lt;连接条件表达式&gt; 。</li>
+<li>&lt;左表&gt; LEFT OUTER JOIN &lt;右表&gt; ON USING(？) 。</li>
+<li>应该总是提供 &lt;连接条件表达式&gt; ，否则会得到笛卡尔积。</li>
+<li>USING 去除重复值。</li>
+</ul>
+<p>右连接：保留右边关系中的悬浮元组。</p>
 <h3 id="41">4.多表连接</h3>
 <p>查询每个学生的学号、姓名、选修的课程名和成绩：</p>
 <p>SELECT Student.Sno, Sname, Cname, Grade</p>
@@ -333,6 +341,8 @@
             </div>
             <div class="nav-next">
                 
+                <a class="next" href="https://onlythepiano.github.io/%E7%B4%A2%E5%BC%95/"> 索引</a>
+                
             </div>
         </div>
     </nav>
@@ -358,13 +368,13 @@
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/java/">Java (3)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/mysql/">MySQL (2)</a>
+                <a href="https://onlythepiano.github.io/categories/mysql/">MySQL (4)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/uml/">UML (2)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/%E5%8F%AF%E4%B9%90/">可乐 (6)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/">数据结构 (1)</a>
+                <a href="https://onlythepiano.github.io/categories/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/">数据结构 (2)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/">设计模式 (9)</a>
             </li><li class="cat-item cat-item-2">
@@ -382,6 +392,9 @@
     <aside class="widget widget_recent_entries">
         <h2>Recent Posts</h2>
         <ul>
+            <li>
+                <a href="/%E7%B4%A2%E5%BC%95/">索引</a>
+            </li>
             <li>
                 <a href="/%E6%95%B0%E6%8D%AE%E6%9F%A5%E8%AF%A2/">数据查询</a>
             </li>
@@ -408,9 +421,6 @@
             </li>
             <li>
                 <a href="/%E8%A7%82%E5%AF%9F%E8%80%85%E6%A8%A1%E5%BC%8F/">观察者模式</a>
-            </li>
-            <li>
-                <a href="/%E5%B7%A5%E5%8E%82%E6%96%B9%E6%B3%95%E6%A8%A1%E5%BC%8F/">工厂方法模式</a>
             </li>
         </ul>
     </aside>
