update blog: 索引

--- a/索引/index.html
+++ b/索引/index.html
@@ -161,7 +161,7 @@
 <p>因为Sparse Index本身是有序的，所以可以为Sparse Index再建sparse Index。通过
 这个方法，一层一层的建立 Sparse Indexes,直到最上层的Sparse Index只占用一个块
 为止,</p>
-<p>![多层Sparse Index](<a href="https://onlythepiano.github.io/images/">https://onlythepiano.github.io/images/</a>多层Sparse Index.jpg)</p>
+<p><img src="https://onlythepiano.github.io/images/%E5%A4%9A%E5%B1%82Sparse_Index.jpg" alt="多层Sparse Index"></p>
 <ul>
 <li>这个最上层的Sparse Index称作整个索引树的根(root).</li>
 <li>每次进行定位操作时，都从根开始查找。</li>
