--- a/mvc框架/index.html
+++ b/mvc框架/index.html
@@ -250,9 +250,9 @@
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/hugo/">Hugo (2)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/java/">Java (3)</a>
+                <a href="https://onlythepiano.github.io/categories/java/">Java (4)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/mysql/">MySQL (4)</a>
+                <a href="https://onlythepiano.github.io/categories/mysql/">MySQL (5)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/uml/">UML (2)</a>
             </li><li class="cat-item cat-item-2">
@@ -277,6 +277,12 @@
         <h2>Recent Posts</h2>
         <ul>
             <li>
+                <a href="/%E6%AD%A3%E5%88%99%E8%A1%A8%E8%BE%BE%E5%BC%8F/">正则表达式</a>
+            </li>
+            <li>
+                <a href="/%E5%88%86%E8%A1%A8%E5%92%8C%E5%88%86%E5%8C%BA/">分表和分区</a>
+            </li>
+            <li>
                 <a href="/%E7%B4%A2%E5%BC%95/">索引</a>
             </li>
             <li>
@@ -299,12 +305,6 @@
             </li>
             <li>
                 <a href="/%E5%8D%95%E4%BE%8B%E6%A8%A1%E5%BC%8F2/">单例模式2</a>
-            </li>
-            <li>
-                <a href="/%E5%8D%95%E4%BE%8B%E6%A8%A1%E5%BC%8F/">单例模式</a>
-            </li>
-            <li>
-                <a href="/%E8%A7%82%E5%AF%9F%E8%80%85%E6%A8%A1%E5%BC%8F/">观察者模式</a>
             </li>
         </ul>
     </aside>
