--- a/分表和分区/index.html
+++ b/分表和分区/index.html
@@ -87,13 +87,13 @@
 <h2 id="heading1">业务分库</h2>
 <p>业务分库：按业务将不同表放进不同库。每个库可以放在不同数据库服务器上。</p>
 <p>对于那些很小、无需进行切片的表，可以将多个这样的表共同放在同一个库中，也可以根据联接特性将其分开放置在常与之进行联接的库中。</p>
-<p><img src="C:%5CUsers%5C79949%5CDesktop%5Cimages%5Cimage-20200621104353076.png" alt="image-20200621104353076"></p>
+<p><img src="https://onlythepiano.github.io/images/image-20200621104353076.png" alt="image-20200621104353076"></p>
 <p>一般来说，对于可预见的、不断增长的数据，业务分库可能最先进行的 sharding。</p>
 <h2 id="heading2">垂直切分</h2>
 <p>垂直切分：将一个表按照字段分成多表，每个表存储一部分字段。表可以放在不同存储设备上。</p>
 <p>当设计的数据库表满足第一范式、第二范式、第三范式等等范式要求时，其实就已经进行了所谓的垂直切分。</p>
 <p>当表数据量很大时，即使满足了范式要求，还是可以<strong>强行将表按字段切开，将热门字段、冷门字段分开放置在不同库中</strong>，这些库可以放在不同的存储设备上，避免IO争抢。</p>
-<p><img src="C:%5CUsers%5C79949%5CDesktop%5Cimages%5C733013-20180729224441719-914234376.png" alt="733013-20180729224441719-914234376"></p>
+<p><img src="https://onlythepiano.github.io/images/733013-20180729224441719-914234376.png" alt="733013-20180729224441719-914234376"></p>
 <h2 id="heading3">水平切分</h2>
 <p>水平切分：将大表按条件切分到不同表中。每个表存储一部分满足条件的行。</p>
 <p>水平切分对性能提升非常大，不仅可以避开服务器资源争用，还减小了索引大小以及每个库维护的表数据量。</p>
@@ -105,16 +105,16 @@
 </ol>
 <h3 id="1">1.按字段条件切分</h3>
 <p>按字段条件进行水平切分时，表名不变，创建新的按地区命名的库，将各地区的表放置在对应的库中。</p>
-<p><img src="C:%5CUsers%5C79949%5CDesktop%5Cimages%5Cimage-20200621104518136.png" alt="image-20200621104518136"></p>
-<p><img src="C:%5CUsers%5C79949%5CDesktop%5Cimages%5Cimage-20200621104633852.png" alt="image-20200621104633852"></p>
+<p><img src="https://onlythepiano.github.io/images/image-20200621104518136.png" alt="image-20200621104518136"></p>
+<p><img src="https://onlythepiano.github.io/images/image-20200621104633852.png" alt="image-20200621104633852"></p>
 <h3 id="2">2.按范围进行切分</h3>
 <p>如果在此之前已经进行了业务分库，就无法让成绩表、考生表同时按照地区进行水平切分。这时可以进行范围切分，最常见的范围切分是按月份、季度、年份进行切分。</p>
-<p><img src="C:%5CUsers%5C79949%5CDesktop%5Cimages%5Cimage-20200621104715672.png" alt="image-20200621104715672"></p>
+<p><img src="https://onlythepiano.github.io/images/image-20200621104715672.png" alt="image-20200621104715672"></p>
 <h3 id="3">3.取模切分</h3>
 <p>取模是对数值或能转换为数值的字段进行取模，要切分成几片，就除几。</p>
 <h2 id="heading4">数据库分区</h2>
 <p>数据库分区：将大表进行分区，不同分区可以放置在不同存储设备上，这些分区在逻辑上组成一个大表，对客户端透明。</p>
-<p><img src="C:%5CUsers%5C79949%5CDesktop%5Cimages%5Cimage-20200621104744068.png" alt="image-20200621104744068"></p>
+<p><img src="https://onlythepiano.github.io/images/image-20200621104744068.png" alt="image-20200621104744068"></p>
 <p><strong>- 数据库分区特性：</strong></p>
 <ol>
 <li>分区方式和水平切片是类似的，分区方式也和水平切片方式类似，如范围切片，取模切片等。</li>
@@ -192,13 +192,13 @@
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/hugo/">Hugo (2)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/java/">Java (4)</a>
+                <a href="https://onlythepiano.github.io/categories/java/">Java (5)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/mysql/">MySQL (5)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/uml/">UML (2)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/%E5%8F%AF%E4%B9%90/">可乐 (6)</a>
+                <a href="https://onlythepiano.github.io/categories/%E5%8F%AF%E4%B9%90/">可乐 (7)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/">数据结构 (2)</a>
             </li><li class="cat-item cat-item-2">
@@ -218,6 +218,9 @@
     <aside class="widget widget_recent_entries">
         <h2>Recent Posts</h2>
         <ul>
+            <li>
+                <a href="/6%E5%8F%B7%E6%9D%AF/">6号杯</a>
+            </li>
             <li>
                 <a href="/%E6%AD%A3%E5%88%99%E8%A1%A8%E8%BE%BE%E5%BC%8F/">正则表达式</a>
             </li>
@@ -244,9 +247,6 @@
             </li>
             <li>
                 <a href="/%E5%A4%96%E8%A7%82%E6%A8%A1%E5%BC%8F/">外观模式</a>
-            </li>
-            <li>
-                <a href="/%E5%8D%95%E4%BE%8B%E6%A8%A1%E5%BC%8F2/">单例模式2</a>
             </li>
         </ul>
     </aside>
