--- a/正则表达式/index.html
+++ b/正则表达式/index.html
@@ -222,6 +222,8 @@ Matcher m <span style="color:#f92672">=</span> p<span style="color:#f92672">.</s
             </div>
             <div class="nav-next">
                 
+                <a class="next" href="https://onlythepiano.github.io/6%E5%8F%B7%E6%9D%AF/"> 6号杯</a>
+                
             </div>
         </div>
     </nav>
@@ -245,13 +247,13 @@ Matcher m <span style="color:#f92672">=</span> p<span style="color:#f92672">.</s
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/hugo/">Hugo (2)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/java/">Java (4)</a>
+                <a href="https://onlythepiano.github.io/categories/java/">Java (5)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/mysql/">MySQL (5)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/uml/">UML (2)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/%E5%8F%AF%E4%B9%90/">可乐 (6)</a>
+                <a href="https://onlythepiano.github.io/categories/%E5%8F%AF%E4%B9%90/">可乐 (7)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/">数据结构 (2)</a>
             </li><li class="cat-item cat-item-2">
@@ -271,6 +273,9 @@ Matcher m <span style="color:#f92672">=</span> p<span style="color:#f92672">.</s
     <aside class="widget widget_recent_entries">
         <h2>Recent Posts</h2>
         <ul>
+            <li>
+                <a href="/6%E5%8F%B7%E6%9D%AF/">6号杯</a>
+            </li>
             <li>
                 <a href="/%E6%AD%A3%E5%88%99%E8%A1%A8%E8%BE%BE%E5%BC%8F/">正则表达式</a>
             </li>
@@ -297,9 +302,6 @@ Matcher m <span style="color:#f92672">=</span> p<span style="color:#f92672">.</s
             </li>
             <li>
                 <a href="/%E5%A4%96%E8%A7%82%E6%A8%A1%E5%BC%8F/">外观模式</a>
-            </li>
-            <li>
-                <a href="/%E5%8D%95%E4%BE%8B%E6%A8%A1%E5%BC%8F2/">单例模式2</a>
             </li>
         </ul>
     </aside>
