--- a/正则表达式/index.html
+++ b/正则表达式/index.html
@@ -247,7 +247,7 @@ Matcher m <span style="color:#f92672">=</span> p<span style="color:#f92672">.</s
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/hugo/">Hugo (2)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/java/">Java (5)</a>
+                <a href="https://onlythepiano.github.io/categories/java/">Java (6)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/mysql/">MySQL (5)</a>
             </li><li class="cat-item cat-item-2">
@@ -274,6 +274,9 @@ Matcher m <span style="color:#f92672">=</span> p<span style="color:#f92672">.</s
         <h2>Recent Posts</h2>
         <ul>
             <li>
+                <a href="/java%E8%BE%93%E5%85%A5%E8%BE%93%E5%87%BA/">Java输入输出</a>
+            </li>
+            <li>
                 <a href="/6%E5%8F%B7%E6%9D%AF/">6号杯</a>
             </li>
             <li>
@@ -299,9 +302,6 @@ Matcher m <span style="color:#f92672">=</span> p<span style="color:#f92672">.</s
             </li>
             <li>
                 <a href="/5%E5%8F%B7%E6%9D%AF/">5号杯</a>
-            </li>
-            <li>
-                <a href="/%E5%A4%96%E8%A7%82%E6%A8%A1%E5%BC%8F/">外观模式</a>
             </li>
         </ul>
     </aside>
