--- a/hosts/index.html
+++ b/hosts/index.html
@@ -207,7 +207,7 @@ Receiving objects:  49% (370/751), 7.44 MiB | 1.13 MiB/s
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/hugo/">Hugo (2)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/java/">Java (5)</a>
+                <a href="https://onlythepiano.github.io/categories/java/">Java (6)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/mysql/">MySQL (5)</a>
             </li><li class="cat-item cat-item-2">
@@ -234,6 +234,9 @@ Receiving objects:  49% (370/751), 7.44 MiB | 1.13 MiB/s
         <h2>Recent Posts</h2>
         <ul>
             <li>
+                <a href="/java%E8%BE%93%E5%85%A5%E8%BE%93%E5%87%BA/">Java输入输出</a>
+            </li>
+            <li>
                 <a href="/6%E5%8F%B7%E6%9D%AF/">6号杯</a>
             </li>
             <li>
@@ -259,9 +262,6 @@ Receiving objects:  49% (370/751), 7.44 MiB | 1.13 MiB/s
             </li>
             <li>
                 <a href="/5%E5%8F%B7%E6%9D%AF/">5号杯</a>
-            </li>
-            <li>
-                <a href="/%E5%A4%96%E8%A7%82%E6%A8%A1%E5%BC%8F/">外观模式</a>
             </li>
         </ul>
     </aside>
