--- a/冲突-远端部署/index.html
+++ b/冲突-远端部署/index.html
@@ -230,7 +230,7 @@ hint: See the 'Note about fast-forwards' in 'git push --help' for details.
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/hugo/">Hugo (2)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/java/">Java (5)</a>
+                <a href="https://onlythepiano.github.io/categories/java/">Java (6)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/mysql/">MySQL (5)</a>
             </li><li class="cat-item cat-item-2">
@@ -257,6 +257,9 @@ hint: See the 'Note about fast-forwards' in 'git push --help' for details.
         <h2>Recent Posts</h2>
         <ul>
             <li>
+                <a href="/java%E8%BE%93%E5%85%A5%E8%BE%93%E5%87%BA/">Java输入输出</a>
+            </li>
+            <li>
                 <a href="/6%E5%8F%B7%E6%9D%AF/">6号杯</a>
             </li>
             <li>
@@ -282,9 +285,6 @@ hint: See the 'Note about fast-forwards' in 'git push --help' for details.
             </li>
             <li>
                 <a href="/5%E5%8F%B7%E6%9D%AF/">5号杯</a>
-            </li>
-            <li>
-                <a href="/%E5%A4%96%E8%A7%82%E6%A8%A1%E5%BC%8F/">外观模式</a>
             </li>
         </ul>
     </aside>
