--- a/java输入输出/index.html
+++ b/java输入输出/index.html
@@ -118,9 +118,17 @@
 <p>在 File 类的 list() 方法中可以接收一个 FilenameFilter 参数,通过该参数可以只列出符合条件的文件。</p>
 <h2 id="java-io-">Java IO 流</h2>
 <h3 id="11">1.流的分类</h3>
-<p><strong>-输入输出流</strong></p>
+<p><strong>- 输入输出流：</strong></p>
 <ul>
-<li>输入输出流的划分是从程序运行所在的内存考虑的。</li>
+<li>
+<p>输入流是带有数据的”水管“</p>
+</li>
+<li>
+<p>输出流是“空水管”</p>
+</li>
+<li>
+<p>输入输出流的划分是从程序运行所在的内存考虑的。</p>
+</li>
 </ul>
 <p><strong>- 字节流和字符流：</strong></p>
 <ul>
@@ -237,7 +245,7 @@
 </table>
 <h3 id="12">1.输入流</h3>
 <p>InputStream 和 Reader 是所有输入流的抽象基类。</p>
-<p>”输入，读取水管“。</p>
+<p>”输入设备是水管，要读取水管“。</p>
 <p><strong>- 输入流的方法（字节是byte[]，字符是char[]）：</strong></p>
 <ul>
 <li>int read(): 读取单个字节，返回的数据可以直接转换为 int 类型。</li>
@@ -267,7 +275,7 @@
 <span style="color:#f92672">}</span>
 </code></pre></div><h3 id="21">2.输出流</h3>
 <p>OutputStream 和 Writer 是所有输入流的抽象基类。</p>
-<p>”输出，写入水管“。</p>
+<p>”输出设备是水管，要写入空水管“。</p>
 <p><strong>- 输出流的方法：</strong></p>
 <ul>
 <li>
@@ -397,7 +405,7 @@ ps<span style="color:#f92672">.</span><span style="color:#a6e22e">print</span><s
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/%E7%A6%BB%E6%95%A3%E6%95%B0%E5%AD%A6/">离散数学 (1)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/">设计模式 (10)</a>
+                <a href="https://onlythepiano.github.io/categories/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/">设计模式 (11)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/%E8%BD%AF%E4%BB%B6%E5%B7%A5%E7%A8%8B/">软件工程 (2)</a>
             </li>
@@ -413,6 +421,9 @@ ps<span style="color:#f92672">.</span><span style="color:#a6e22e">print</span><s
     <aside class="widget widget_recent_entries">
         <h2>Recent Posts</h2>
         <ul>
+            <li>
+                <a href="/%E4%B8%AD%E4%BB%8B%E8%80%85%E6%A8%A1%E5%BC%8F/">中介者模式</a>
+            </li>
             <li>
                 <a href="/%E8%A3%85%E9%A5%B0%E8%80%85%E6%A8%A1%E5%BC%8F/">装饰者模式</a>
             </li>
@@ -439,9 +450,6 @@ ps<span style="color:#f92672">.</span><span style="color:#a6e22e">print</span><s
             </li>
             <li>
                 <a href="/%E6%AD%A3%E5%88%99%E8%A1%A8%E8%BE%BE%E5%BC%8F/">正则表达式</a>
-            </li>
-            <li>
-                <a href="/%E5%88%86%E8%A1%A8%E5%92%8C%E5%88%86%E5%8C%BA/">分表和分区</a>
             </li>
         </ul>
     </aside>
