--- a/外观模式/index.html
+++ b/外观模式/index.html
@@ -197,7 +197,7 @@ jijin<span style="color:#f92672">.</span><span style="color:#a6e22e">SellFund</s
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/hugo/">Hugo (2)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/java/">Java (10)</a>
+                <a href="https://onlythepiano.github.io/categories/java/">Java (11)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/mysql/">MySQL (9)</a>
             </li><li class="cat-item cat-item-2">
@@ -226,6 +226,9 @@ jijin<span style="color:#f92672">.</span><span style="color:#a6e22e">SellFund</s
         <h2>Recent Posts</h2>
         <ul>
             <li>
+                <a href="/%E6%B3%9B%E5%9E%8B/">泛型</a>
+            </li>
+            <li>
                 <a href="/7%E5%8F%B7%E6%9D%AF/">7号杯</a>
             </li>
             <li>
@@ -251,9 +254,6 @@ jijin<span style="color:#f92672">.</span><span style="color:#a6e22e">SellFund</s
             </li>
             <li>
                 <a href="/%E8%A3%85%E9%A5%B0%E8%80%85%E6%A8%A1%E5%BC%8F/">装饰者模式</a>
-            </li>
-            <li>
-                <a href="/%E5%A4%8D%E5%88%B6/">复制</a>
             </li>
         </ul>
     </aside>
