--- a/string类和常量池/index.html
+++ b/string类和常量池/index.html
@@ -203,7 +203,7 @@ i4<span style="color:#f92672">=</span>i5<span style="color:#f92672">+</span>i6  
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/hugo/">Hugo (2)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/java/">Java (10)</a>
+                <a href="https://onlythepiano.github.io/categories/java/">Java (11)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/mysql/">MySQL (9)</a>
             </li><li class="cat-item cat-item-2">
@@ -232,6 +232,9 @@ i4<span style="color:#f92672">=</span>i5<span style="color:#f92672">+</span>i6  
         <h2>Recent Posts</h2>
         <ul>
             <li>
+                <a href="/%E6%B3%9B%E5%9E%8B/">泛型</a>
+            </li>
+            <li>
                 <a href="/7%E5%8F%B7%E6%9D%AF/">7号杯</a>
             </li>
             <li>
@@ -257,9 +260,6 @@ i4<span style="color:#f92672">=</span>i5<span style="color:#f92672">+</span>i6  
             </li>
             <li>
                 <a href="/%E8%A3%85%E9%A5%B0%E8%80%85%E6%A8%A1%E5%BC%8F/">装饰者模式</a>
-            </li>
-            <li>
-                <a href="/%E5%A4%8D%E5%88%B6/">复制</a>
             </li>
         </ul>
     </aside>
