--- a/建筑者模式/index.html
+++ b/建筑者模式/index.html
@@ -229,7 +229,7 @@ pd2<span style="color:#f92672">.</span><span style="color:#a6e22e">CreatePerson<
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/hugo/">Hugo (2)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/java/">Java (10)</a>
+                <a href="https://onlythepiano.github.io/categories/java/">Java (11)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/mysql/">MySQL (9)</a>
             </li><li class="cat-item cat-item-2">
@@ -258,6 +258,9 @@ pd2<span style="color:#f92672">.</span><span style="color:#a6e22e">CreatePerson<
         <h2>Recent Posts</h2>
         <ul>
             <li>
+                <a href="/%E6%B3%9B%E5%9E%8B/">泛型</a>
+            </li>
+            <li>
                 <a href="/7%E5%8F%B7%E6%9D%AF/">7号杯</a>
             </li>
             <li>
@@ -283,9 +286,6 @@ pd2<span style="color:#f92672">.</span><span style="color:#a6e22e">CreatePerson<
             </li>
             <li>
                 <a href="/%E8%A3%85%E9%A5%B0%E8%80%85%E6%A8%A1%E5%BC%8F/">装饰者模式</a>
-            </li>
-            <li>
-                <a href="/%E5%A4%8D%E5%88%B6/">复制</a>
             </li>
         </ul>
     </aside>
