add blog: Java集合

--- a/泛型/index.html
+++ b/泛型/index.html
@@ -254,7 +254,7 @@ List<span style="color:#f92672">&lt;</span>Integer<span style="color:#f92672">&g
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/hugo/">Hugo (2)</a>
             </li><li class="cat-item cat-item-2">
-                <a href="https://onlythepiano.github.io/categories/java/">Java (14)</a>
+                <a href="https://onlythepiano.github.io/categories/java/">Java (16)</a>
             </li><li class="cat-item cat-item-2">
                 <a href="https://onlythepiano.github.io/categories/mysql/">MySQL (9)</a>
             </li><li class="cat-item cat-item-2">
@@ -285,6 +285,12 @@ List<span style="color:#f92672">&lt;</span>Integer<span style="color:#f92672">&g
         <h2>Recent Posts</h2>
         <ul>
             <li>
+                <a href="/java%E9%9B%86%E5%90%88-setlistmap/">Java集合-Set、List、Map</a>
+            </li>
+            <li>
+                <a href="/java%E9%9B%86%E5%90%88/">Java集合</a>
+            </li>
+            <li>
                 <a href="/java%E5%9F%BA%E7%A1%80%E7%B1%BB%E5%BA%93-string%E7%B1%BB/">Java基础类库-String类</a>
             </li>
             <li>
@@ -307,12 +313,6 @@ List<span style="color:#f92672">&lt;</span>Integer<span style="color:#f92672">&g
             </li>
             <li>
                 <a href="/java%E5%B9%B6%E5%8F%91-%E8%BF%9B%E7%A8%8B%E7%BA%BF%E7%A8%8B2/">Java并发-进程线程2</a>
-            </li>
-            <li>
-                <a href="/%E5%9E%83%E5%9C%BE%E6%94%B6%E9%9B%86%E5%99%A8%E5%92%8C%E5%86%85%E5%AD%98%E5%88%86%E9%85%8D%E7%AD%96%E7%95%A5/">垃圾收集器和内存分配策略</a>
-            </li>
-            <li>
-                <a href="/string%E7%B1%BB%E5%92%8C%E5%B8%B8%E9%87%8F%E6%B1%A0/">String类和常量池</a>
             </li>
         </ul>
     </aside>
