update blog: 序列化

--- a/序列化/index.html
+++ b/序列化/index.html
@@ -88,7 +88,7 @@
 序列化就是解决这个问题的。虽然内存不共享，但我们可以将对象转化为一段字节序列，并放到流中，接下来就交给 I/O，可以存储在文件中、可以通过网络传输……当我们想用到这些对象的时候，再通过 I/O，从文件、网络上读取字节序列，根据这些信息重建对象。而重建对象的过程也叫做“反序列化”。如果没有 “反序列化”，那么“序列化”是没有任何意义的。</p>
 <p>  用现实生活中的搬桌子为例，桌子太大了不能通过比较小的门，我们要把它拆了再运进去，这个拆桌子的过程就是序列化。同理，反序列化就是等我们需要用桌子的时候再把它组合起来，这个过程就是反序列化。</p>
 <p>  理解上面的背景知识后，序列化和反序列化概括起来就是下面这张图：</p>
-<p><img src="C:%5CUsers%5C79949%5CDesktop%5Cimages%5Cimage-20200710133319666.png" alt="image-20200710133319666"></p>
+<p><img src="https://onlythepiano.github.io/images/image-20200710133319666.png" alt="image-20200710133319666"></p>
 <ol>
 <li>根据某种序列化算法，将对象序列化。（结果可能是：字节序列、json串等，取决于使用的序列化算法）</li>
 <li>将序列化的结果通过流写入到载体中 (文件、数据库、redis、网络等 )</li>
